fix eyebleed colors

--- a/css/custom.css
+++ b/css/custom.css
@@ -6,21 +6,27 @@ html {
 }
 body {
     margin-bottom: 60px; /* Margin bottom by footer height */
-    background-color:  yellowgreen;
-    color: mediumblue;
+    background-color: darkorange;
+    color: #000000;
 }
+
+a, a:active, a:visited {
+    color: #ffffff;
+    text-decoration: underline;
+}
+a:hover {
+    color: orangered;
+    text-decoration: none;
+}
+
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
-    background-color: greenyellow;
+    background-color: orange;
 
-}
-
-.text-muted {
-    color: darkblue  !important;
 }
 
 .vertical-center {
